baekend/src/main/java/com/example/recifit/global/error/exception/CustomException.java
package com.example.recifit.global.error.exception;

import com.example.recifit.global.error.errorcode.ErrorCode;
import lombok.Getter;

@Getter
public class CustomException extends RuntimeException {

    private final ErrorCode errorCode;

    public CustomException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }

    public ErrorCode getErrorCode() {
        return errorCode;
    }
}
